# apple-music-tui

./: Cargo.toml  LICENSE  README.md  dev.md
src/: app.rs  events.rs  jxa.rs  main.rs  ui.rs
