[package]
name = "apple-music-tui"
version = "0.2.1"
edition = "2024"
authors = ["ori0o0p"]
description = "A TUI remote controller for macOS Music.app"
license = "MIT"
repository = "https://github.com/ori0o0p/apple-music-tui"
homepage = "https://github.com/ori0o0p/apple-music-tui"
keywords = ["tui", "apple-music", "macos", "terminal", "music"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui-image = { version = "4", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"

